# gvisor

./: BUILD  WORKSPACE  go.mod  go.sum
pkg/sentry/control/: proc.go
pkg/sentry/fs/proc/: fds.go
pkg/sentry/kernel/: BUILD  fd_table.go  fd_table_unsafe.go  kernel.go  task.go  task_clone.go  task_start.go
pkg/sentry/kernel/guard/: .guard.go.swp  BUILD  guard.go  linked_list.go  msg.go  parser.go
pkg/sentry/mm/: mm.go  syscalls.go  vma.go
pkg/sentry/socket/epsocket/: epsocket.go
pkg/sentry/socket/hostinet/: save_restore.go  socket.go  socket_unsafe.go
pkg/sentry/socket/netstack/: BUILD  filtered_services.go  netstack.go
pkg/sentry/strace/: linux64.go  linux64_amd64.go
pkg/sentry/syscalls/linux/: BUILD  linux64.go  linux64_amd64.go  sys_file.go  sys_hypercalls.go  sys_read.go  (+2 more)
pkg/sentry/watchdog/: watchdog.go
pkg/tcpip/: tcpip.go
pkg/tcpip/header/: ipv6.go
pkg/tcpip/stack/: nic.go  transport_demuxer_test.go  transport_test.go
pkg/urpc/: urpc.go
runsc/: BUILD  main.go
runsc/boot/: fds.go  loader.go
runsc/boot/filter/: config.go  filter.go
runsc/cmd/: BUILD  boot.go  gofer.go  seclambda.go
runsc/container/: container.go
runsc/fsgofer/filter/: filter.go
runsc/sandbox/: network.go  sandbox.go
runsc/seclambda/: BUILD  guard.go  linked_list.go  msg.go  seclambda.go
runsc/specutils/: namespace.go
test/syscalls/linux/: BUILD  socket_bind_to_device.cc  socket_bind_to_device_distribution.cc  socket_bind_to_device_sequence.cc  socket_bind_to_device_util.cc
tools/: BUILD.bazel  CROSSTOOL  cc_toolchain_config.bzl
vdso/: BUILD
(+7 files in other folders)
