load(":cc_toolchain_config.bzl", "cc_toolchain_config")
package(default_visibility = ["//visibility:public"])
cc_toolchain_config(name = "gcc_musl_config")

filegroup(
    name = "empty",
    srcs = [],
)


filegroup(
    name = "all",
    srcs = glob([
        "musl/bin/**",
        "musl/lib/**",
        "musl/libexec/**",
        "musl/share/**",
	"musl/x86_64-linux-musl/bin/**",
	"musl/x86_64-linux-musl/lib/**",
	"musl/x86_64-linux-musl/include/**",
    ]),
)


cc_toolchain(
    name = "cc-compiler-musl",
    all_files = ":all",
    compiler_files = ":all",
    dwp_files = ":empty",
    dynamic_runtime_lib = "//tools/musl/x86_64-linux-musl/lib:libstdc++.so",
    linker_files = ":all",
    objcopy_files = ":empty",
    static_runtime_lib = "//tools/musl/x86_64-linux-musl/lib:libstdc++.a",
    strip_files = ":empty",
    supports_param_files = 1,
    toolchain_identifier = "gcc-musl",
    toolchain_config = "gcc_musl_config",

)

cc_toolchain_suite(
    name = "musl-toolchain",
    toolchains = {
        "k8": ":cc-compiler-musl",
        "x86_64|gcc-musl": ":cc-compiler-musl",
    },
)

